# mage-sdk-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/macros/: FindReadline.cmake
examples/: CMakeLists.txt  async.cpp  authentication.cpp  callback.cpp  callback_thread.cpp  events.cpp  simple.cpp
src/: CMakeLists.txt  eventObserver.h  exceptions.cpp  exceptions.h  mage.cpp  mage.h  rpc.cpp  rpc.h  rpc_stream.cpp
